# setup_rust_project

./: .gitignore  Cargo.toml  README.md  setup_rust_project.code-workspace
src/: main.rs
